--- a/package.json
+++ b/package.json
@@ -46,6 +46,10 @@
     "npm-run-all": "4.1.5"
   },
   "dependencies": {
+    "eslint": "^5.12.0",
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-prettier": "^3.0.0",
+    "prettier": "1.15.3",
     "@applitools/eyes-webdriverio": "5.22.1",
     "@lambdatest/node-rest-client": "1.0.0",
     "@wdio/cli": "6.4.2",
@@ -75,7 +79,7 @@
     "moment": "2.28.0",
     "ox-chrome-remote-interface": "0.28.1",
     "oxygen-logger": "0.5.0",
-    "pdfreader": "1.0.4",
+    "pdfreader": "git+https://github.com/adrienjoly/npm-pdfreader.git",
     "perfecto-reporting": "2.5.3",
     "request": "2.88.2",
     "saucelabs": "3.0.1",
